Fixed issue where time bar was allowed to get too big. Set max width for time bar and distance bar

--- a/web_files/styles/tracker.css
+++ b/web_files/styles/tracker.css
@@ -466,17 +466,20 @@ html, body {
     justify-content: space-between;
     height: 38px;
     width: 353px;
+    overflow: hidden;
 }
 
 .time_bar {
     height: 18px;
     min-width: 2px;
+    max-width: 353px;
     background-color: rgb(86, 204, 242);
 }
 
 .distance_bar {
     height: 18px;
     min-width: 2px;
+    max-width: 353px;
     background-color: rgb(255, 176, 0);
 }
 
